# SW-project

./: .cursorignore  .gitignore  README.md  caption_generation.py  embedding_generation.py  gemini_models.json  local_to_atlas.py  pyproject.toml  result.json  simple_performance_test.py  utils.py
.github/workflows/: ec2.yaml
app/: graph.py  main.py  readme.md  utils.py
app/config/: dependencies.py  exceptions.py  settings.py
app/langgraph/: edges.py  graph.py  nodes.py  states.py  utils.py
app/model/: saarch_api.py
app/router/: websocket.py
app/services/: search.py
aws/: aws_manager.py  config.json  config.py  dynamodb.py  product_models.py  readme.md  s3.py  utils.py
caption/: config.py  fashion_caption_generator.py  gemini_model_test.py  image_caption.py  image_preprocessing.py  langchain_utils.py  main.py  readme.md
caption/models/: README.md  __init__.py  base_types.py  bottom_product_attributes.py  langchain_utils.py  master_data.py  product.py  product_attributes.py  product_color_attributes.py  text_image_attributes.py  top_product_attributes.py  variant_models.py
client/: index.html
db/: __init__.py  index_manager.py  mongodb.py  readme.md  utils.py  vector_search.py
dev_tools/: _path_init.py
embedding/: embedding.py  other_api.py  performance_test.py  quick_test.py
example/: Jina-embedding-api.py  connect-langfuse-localhost.py  gemini_model_test.py  get_gemini_model.py  ocr_from_image.py  transform_text.ipynb
processing/: image_downloader.py  image_processor.py  save_crawling_result_to_local_mongo.py  utils.py
tests/: conftest.py
(+33 files in other folders)
